--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   margin: 75px 0 90px;
 }
 .f_border {
-  border-color: #8e8e8e;
+  border: 1px solid #8e8e8e;
 }
 /*common css end*/
 /*header start*/
@@ -98,16 +98,16 @@ header {
   font-family: Roboto-Medium;
   background-color: #fff;
   text-transform: uppercase;
+  border-radius: 0;
   padding: 8px 20px;
-}
-.btn_icon {
-  margin-left: 15px;
 }
 /*control buttons*/
 .ccp,
 .ccn {
+  font-family: Roboto-Medium;
   color: #8e8e8e;
   align-items: flex-end;
+  top: 91%;
   bottom: 20px;
 }
 .ccp span,
@@ -117,8 +117,7 @@ header {
 .ccn {
   left: 70px;
 }
-.ccp,
-.ccn:hover {
+.ccp:hover, .ccn:hover {
   font-family: Lato-Bold;
   color: #333333 !important;
 }
@@ -133,6 +132,7 @@ header {
   font-size: 30px;
   color: #333333;
   text-transform: uppercase;
+  word-spacing: 3px;
   margin-bottom: 40px;
 }
 .title_bottom_line {
@@ -191,7 +191,7 @@ header {
   border: 1px solid transparent !important;
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
-  transition: .3s;
+  transition: 0.3s;
 }
 .recent_work_btn:hover {
   color: #333333;
@@ -202,9 +202,9 @@ header {
   border: 1px solid #333333 !important;
 }
 .work_demo {
-width: 95%;
-position: relative;
-margin-top: 20px;
+  width: 95%;
+  position: relative;
+  margin-top: 20px;
 }
 .work_demo img {
   width: 100%;
@@ -221,7 +221,6 @@ margin-top: 20px;
 .demo_overlay {
   width: 100%;
   position: absolute;
-  left: 0;
   bottom: -80px;
   background-color: #fff;
   opacity: 0;
@@ -232,9 +231,9 @@ margin-top: 20px;
 .work_demo:hover .demo_icon {
   opacity: 1;
 }
-.work_demo:hover .demo_overlay{
-  bottom: 22%;
-  transform: translateY(80%);
+.work_demo:hover .demo_overlay {
+  bottom: -20%;
+  transform: translateY(-80px);
   opacity: 1;
 }
 /*recent work section end*/
@@ -242,7 +241,7 @@ margin-top: 20px;
 .single_content {
   margin-top: 60px;
   border-bottom: 1px solid #8e8e8e;
-  transition: .3s;
+  transition: 0.3s;
 }
 .single_content:hover {
   color: #333333;
@@ -256,11 +255,11 @@ margin-top: 20px;
   font-family: Lato-Bold;
   margin-top: 10px;
   margin-left: -12px;
- }
- .single_content p {
-   margin-top: 20px;
-   color: #8e8e8e;
- }
+}
+.single_content p {
+  margin-top: 20px;
+  color: #8e8e8e;
+}
 /*why choose section end*/
 /*work section start*/
 .why_work {
@@ -279,7 +278,7 @@ margin-top: 20px;
   position: absolute;
   top: 0;
   opacity: 0;
-  transition: .5s;
+  transition: 0.5s;
 }
 .hover_icons ul li {
   width: 40px;
@@ -307,13 +306,13 @@ margin-top: 20px;
   background-color: #fff;
   padding: 20px;
 }
-.work_detail p{
+.work_detail p {
   margin-bottom: 0;
 }
 /*work section end*/
 /*pricing section start*/
 .price_title {
-  width: 23%;
+  width: 26%;
   text-align: center;
   margin: 0 auto;
   margin-top: -30px;
@@ -321,7 +320,11 @@ margin-top: 20px;
   background-color: #fff;
 }
 .price_chart {
-  margin-top: 50px;
+  margin-top: 45px;
+}
+.price_chart:hover .price_btn {
+  color: #333333;
+  border-color: #333333;
 }
 .price_value {
   margin-top: 30px;
@@ -330,17 +333,95 @@ margin-top: 20px;
   padding-left: 1rem;
 }
 .price_list ul li {
- list-style: none;
- margin: 15px 0;
+  list-style: none;
+  margin: 15px 0;
 }
 .price_btn {
-color: #8e8e8e;
-text-align: center !important;
-border-color: #8e8e8e;
-margin: 15px 0 12px 50px;
-padding: 8px 40px;
+  color: #8e8e8e;
+  text-align: center !important;
+  border-color: #8e8e8e;
+  margin: 15px 0 12px 20px;
+  padding: 8px 25px;
+}
+.btn_icon {
+  margin-left: 10px;
 }
 /*pricing section end*/
+/*buy template start*/
+.responsive p a {
+  font-size: 18px;
+  color: #333333;
+  text-decoration: none;
+}
+/*buy template end*/
+/*work member slider start*/
+.member_bio {
+position: relative;
+padding: 35px 27px;
+}
+.pin_icon {
+  position: absolute;
+  top: 53px;
+  left: 48px;
+}
+.pin_icon i {
+  font-size: 28px;
+  color: #333333;
+}
+.wm_text {
+  font-size: 18px;
+}
+.wbp, .wbn {
+  font-family: Roboto-Medium;
+  font-size: 18px;
+  color: #8e8e8e;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 100px;
+  left: 0;
+}
+.wbp span, .wbn span {
+  transform: rotate(90deg);
+}
+.wbp:hover, .wbn:hover {
+  font-family: Lato-Bold;
+  color: #333333;
+}
+/*work member slider end*/
+/*contact section start*/
+.contact_heading {
+  width: 200px;
+  background-color: #fff;
+  margin: 0 auto;
+  margin-top: -19px;
+}
+.contact_info {
+  padding: 50px 0;
+}
+.custom_info {
+  border: transparent;
+  border-bottom: 1px solid #8e8e8e;
+  border-radius: 0;
+  margin: 25px 0;
+}
+.custom_info:focus {
+  outline: 0;
+  box-shadow: none;
+  border-bottom-color: #8e8e8e;
+}
+.custom_info:hover {
+  border-bottom-color: #333333;
+}
+.custom_comment {
+  margin-top: 40px;
+}
+.info_btn {
+  width: 165px;
+  border: 1px solid #333333;
+  margin-top: 25px;
+}
+/*contact section end*/
 /*footer start*/
 .footer {
   background-image: url(../images/footer_bg.jpg);
@@ -348,7 +429,7 @@ padding: 8px 40px;
   background-repeat: no-repeat;
 }
 .agency {
-
+  margin: 40px 0 80px;
 }
 .agency p {
   font-size: 17px;
@@ -389,7 +470,7 @@ footer {
   margin-right: 30px;
 }
 .footer_bottom ul li a {
-  color: #ffffff ;
+  color: #ffffff;
   padding: 2px 8px;
 }
 .footer_bottom ul li:last-child {
